# LabCodes

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: CMakeLists.txt  HammingCodesLab.cpp  HammingCodesLab.h  HammingLabEventEmitter.cpp  HammingLabEventEmitter.h  HammingLabProcessor.cpp  HammingLabProcessor.h  HammingLabResult.h  HammingLabView.h  HammingLabWidget.cpp  HammingLabWidget.h  main.cpp
src/codes/: CMakeLists.txt  CodeConverter.cpp  CodeConverter.h  EnvironmentImitator.cpp  EnvironmentImitator.h  Message.cpp  Message.h  Polynomial.h  SimplePolynomial.cpp  SimplePolynomial.h
src/cyclicCodes/: AboutWindow.cpp  AboutWindow.h  BarChartWidget.cpp  BarChartWidget.h  CMakeLists.txt  CyclicCodesLab.cpp  CyclicCodesLab.h  CyclicCodesWidget.cpp  CyclicCodesWidget.h  CyclicLabResult.cpp  CyclicLabResult.h  CyclicLabTask.cpp  CyclicLabTask.h  CyclicLabView.h  CyclicPolynomialLabel.cpp  CyclicPolynomialLabel.h  LabTaskRunner.cpp  LabTaskRunner.h  MainWindow.cpp  MainWindow.h  main.cpp
src/hammingCodes/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  HammingCodeLabel.cpp  HammingCodeLabel.h  HammingCodesLab.cpp  HammingCodesLab.h  HammingLabEventEmitter.h  HammingLabProcessor.h  HammingLabResult.cpp  HammingLabWidget.cpp  HammingLabWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
